[package]
name = "mpls"
version = "0.1.0"
authors = ["Dominik Mydlil <dominik.mydlil@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "A movie playlist file (MPLS) parser."
repository = "https://github.com/domyd/mpls"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.1"
