[package]
name = "mpls"
version = "0.2.0"
authors = ["Dominik Mydlil <dominik.mydlil@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "A movie playlist file (MPLS) parser."
repository = "https://github.com/domyd/mpls"
readme = "README.md"
keywords = ["bluray", "playlist"]
categories = ["parser-implementations", "multimedia::encoding"]
edition = "2018"

[dependencies]
nom = "5.1.1"

[dev-dependencies]
version-sync = "0.9.0"
